bevy_elf_macros/tests/ui/fail/empty_field_attr_with_parens.rs
use bevy_elf_macros::FromDef;

#[derive(FromDef)]
#[allow(unused)]
struct Foo {
    #[elf()]
    x: bool,
}

fn main() {}
